# black_hole-metal

./: .gitignore  CHANGELOG.md  ENHANCEMENT_SUMMARY.md  FINAL_SUMMARY.md  README.md  black_hole.cpp  geodesic.comp  install-deps.sh  quick-build.sh
Metal-iOS/: BUILD_INSTRUCTIONS.md  COMPARISON.md  ENHANCED_FEATURES.md  OUTPUT_SPECIFICATION.md  README.md  TestGeodesic.swift  TestMetalImplementation.swift
Metal-iOS/BlackHoleMetal.xcodeproj/: project.pbxproj
Metal-iOS/BlackHoleMetal.xcodeproj/project.xcworkspace/xcuserdata/mdudzinski.xcuserdatad/: UserInterfaceState.xcuserstate
Metal-iOS/BlackHoleMetal.xcodeproj/xcuserdata/mdudzinski.xcuserdatad/xcschemes/: xcschememanagement.plist
Metal-iOS/BlackHoleMetal/Shaders/: GeodesicCompute.metal
Metal-iOS/BlackHoleMetal/Sources/: App.swift  ContentView.swift  ContentView_Original.swift  MetalRenderer.swift
Metal-iOS/Shared/: Ray.swift
cuda-raytracer/: CMakeLists.txt  README.md
cuda-raytracer/include/: black_hole_cuda.h
cuda-raytracer/src/: camera.cpp  cuda_kernels.cu  main.cpp  opengl_interop.cpp  renderer.cpp
